k8s/keycloak-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak-db
  name: keycloak-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: keycloak-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: keycloakdb
            - name: POSTGRES_PASSWORD
              value: password
            - name: POSTGRES_USER
              value: admin
          image: ':'
          name: keycloak-db
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: keycloak-pgdata
      restartPolicy: Always
      volumes:
        - name: keycloak-pgdata
          persistentVolumeClaim:
            claimName: keycloak-pgdata
status: {}
