k8s/keycloak-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  containers:
    - args:
        - -b
        - 0.0.0.0
        - -Dkeycloak.migration.action=import
        - -Dkeycloak.migration.provider=singleFile
        - -Dkeycloak.migration.file=/config/import.json
        - -Dkeycloak.migration.strategy=IGNORE_EXISTING
        - -Dkeycloak.migration.usersExportStrategy=SAME_FILE
      image: ':'
      name: keycloak
      ports:
        - containerPort: 8080
      resources: {}
      volumeMounts:
        - mountPath: /config/
          name: keycloak-claim0
  restartPolicy: OnFailure
  volumes:
    - name: keycloak-claim0
      persistentVolumeClaim:
        claimName: keycloak-claim0
status: {}
