k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: backend
            - name: POSTGRES_PASSWORD
              value: postgres
            - name: POSTGRES_USER
              value: postgres
          image: 'postgres:13.1'
          imagePullPolicy: Always
          name: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
      restartPolicy: Always
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
