k8s/keycloak-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: keycloak-db
  name: keycloak-db
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    name: postgres
